--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Hello World</title>
+    <title>32173627 Mid-Term-Project</title>
 </head>
 <body>
-    <h1>Hello World</h1>
+    <h1>자기 소개</h1>
 </body>
 </html>
