--- a/index.html
+++ b/index.html
@@ -5,5 +5,10 @@
 </head>
 <body>
     <h1>자기 소개</h1>
+    <br>
+    <img src="/source/Leehaeseong.jpg">
+    <br>
+    <h3> 안녕하세요. 저는 소프트웨어학과 4학년 32173627 이혜성입니다.
+         제 취미는 영화보기, 책읽기입니다.</h3>
 </body>
 </html>
