favorite singer ment

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <br>
     <img src="./source/joker.jpg"/>
     <img src="./source/social_network.jpg"/>
+    
+    <h3>또한, 좋아하는 가수는 데이식스입니다. 데이식스의 많은 노래 중에서도 예뻤어라는 노래를 가장 좋아합니다.</h3>
 
 </body>
 </html>
