--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
     <img src="./source/social_network.jpg"/>
     
     <h3>또한, 좋아하는 가수는 데이식스입니다. 데이식스의 많은 노래 중에서도 예뻤어라는 노래를 가장 좋아합니다.</h3>
-
+    <a href="https://youtu.be/BS7tz2rAOSA">예뻤어 뮤직비디오</a><br/><br/>
 </body>
 </html>
