--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <title>32173627 Mid-Term-Project</title>
+    <link rel="stylesheet" href="main.css">
 </head>
 <body>
     <h1>자기 소개</h1>
