--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
     <br>
     <img id="my_photo" src="./source/Leehaeseong.jpg"/>
     <br>
-    <h3> 안녕하세요. 저는 소프트웨어학과 4학년 32173627 이혜성입니다.
+    <h3 id="introduction"> 안녕하세요. 저는 소프트웨어학과 4학년 32173627 이혜성입니다.
          제 취미는 영화보기, 책읽기입니다. 좋아하는 영화는 조커와 소셜네트워크입니다</h3>
     <br>
     <img id="joker" src="./source/joker.jpg"/>
     <img id="social" src="./source/social_network.jpg"/>
     
-    <h3>또한, 좋아하는 가수는 데이식스입니다. 데이식스의 많은 노래 중에서도 예뻤어라는 노래를 가장 좋아합니다.</h3>
+    <h3 id="favorite_singer">또한, 좋아하는 가수는 데이식스입니다. 데이식스의 많은 노래 중에서도 예뻤어라는 노래를 가장 좋아합니다.</h3>
     <a id="mv_link" href="https://youtu.be/BS7tz2rAOSA">예뻤어 뮤직비디오</a><br/><br/>
 </body>
 </html>
